[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "chatmaild"
version = "0.1"
dependencies = [
  "aiosmtpd",
]

[project.scripts]
doveauth = "chatmaild.doveauth:main"
filtermail = "chatmaild.filtermail:main"

[tool.pytest.ini_options]
addopts = "-v -ra --strict-markers"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_level = "INFO"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = lint,py

[testenv:lint]
skipdist = True
skip_install = True
deps =
  ruff
  black
commands =
  black --quiet --check --diff src/
  ruff src/

[testenv]
passenv = CHATMAIL_DOMAIN
deps = pytest 
       pdbpp 
commands = pytest -v -rsXx {posargs: ../tests/chatmaild}
"""
