[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chatmaild"
version = "0.2"
dependencies = [
  "aiosmtpd",
  "iniconfig",
  "deltachat-rpc-server",
  "deltachat-rpc-client",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ['src']

[project.scripts]
doveauth = "chatmaild.doveauth:main"
filtermail = "chatmaild.filtermail:main"
echobot = "chatmaild.echo:main"
chatmail-metrics = "chatmaild.metrics:main"

[project.entry-points.pytest11]
"chatmaild.testplugin" = "chatmaild.tests.plugin"

[tool.pytest.ini_options]
addopts = "-v -ra --strict-markers"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_level = "INFO"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = lint,py

[testenv:lint]
skipdist = True
skip_install = True
deps =
  ruff
  black
commands =
  black --quiet --check --diff src/
  ruff src/

[testenv]
deps = pytest 
       pdbpp 
commands = pytest -v -rsXx {posargs}
"""
