[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chatmaild"
version = "0.2"
dependencies = [
  "aiosmtpd",
  "iniconfig",
  "deltachat-rpc-server",
  "deltachat-rpc-client",
  "filelock",
  "requests",
  "crypt-r >= 3.13.1 ; python_version >= '3.11'",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ['src']

[project.scripts]
doveauth = "chatmaild.doveauth:main"
chatmail-metadata = "chatmaild.metadata:main"
filtermail = "chatmaild.filtermail:main"
echobot = "chatmaild.echo:main"
chatmail-metrics = "chatmaild.metrics:main"
delete_inactive_users = "chatmaild.delete_inactive_users:main"
lastlogin = "chatmaild.lastlogin:main"

[project.entry-points.pytest11]
"chatmaild.testplugin" = "chatmaild.tests.plugin"

[tool.pytest.ini_options]
addopts = "-v -ra --strict-markers"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_level = "INFO"

[tool.ruff]
lint.select = [
  "F", # Pyflakes
  "I", # isort

  "PLC", # Pylint Convention
  "PLE", # Pylint Error
  "PLW", # Pylint Warning
]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = lint,py

[testenv:lint]
skipdist = True
skip_install = True
deps =
  ruff
commands =
  ruff format --quiet --diff src/
  ruff check src/

[testenv]
deps = pytest 
       pdbpp 
commands = pytest -v -rsXx {posargs}
"""
