[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cmdeploy"
version = "0.2"
dependencies = [
  "pyinfra==3.0b0",
  "pillow",
  "qrcode",
  "markdown",
  "pytest",
  "setuptools>=68",
  "termcolor",
  "build",
  "tox",
  "ruff",
  "black",
  "pytest",
  "pytest-xdist", 
]

[project.scripts]
cmdeploy = "cmdeploy.cmdeploy:main"

[project.entry-points.pytest11]
"chatmaild.testplugin" = "chatmaild.tests.plugin"
"cmdeploy.testplugin" = "cmdeploy.tests.plugin"

[tool.pytest.ini_options]
addopts = "-v -ra --strict-markers"
