[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deploy-chatmail"
version = "0.1"
dependencies = [
  "pyinfra",
  "pillow",
  "qrcode",
  "markdown",
  "pytest",
  "setuptools>=68",
  "termcolor",
  "build",
  "tox",
]

[project.scripts]
cmdeploy = "deploy_chatmail.cmdeploy:main"

[tool.pytest.ini_options]
addopts = "-v -ra --strict-markers"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = lint

[testenv:lint]
skipdist = True
skip_install = True
deps =
  ruff
  black
commands =
  black --quiet --check --diff src/
  ruff src/
"""
