[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deploy-chatmail"
version = "0.1"
dependencies = [
  "pyinfra",
  "pillow",
  "qrcode",
  "markdown",
  "pytest",
  "setuptools>=68",
  "termcolor",
  "build",
  "tox",
]

[project.scripts]
cmdeploy = "deploy_chatmail.cmdeploy:main"

[project.entry-points.pytest11]
"chatmaild.testplugin" = "chatmaild.tests.plugin"

[tool.pytest.ini_options]
addopts = "-v -ra --strict-markers"
